@@ -23,6 +23,7 @@ Some links that should help you find your bearings:
 * @ref connection
 * @ref transaction
 * @ref escaping
+* @ref binary
 * @ref performance
 * @ref transactor
 * @ref datatypes
